2010-10-20  Gary V. Vaughan  <gary@gnu.org>

	build: avoid spurious bootstrap_edit call.
	* Makefile.am (tests/package.m4): @FOO@ substitutions have already
	been made by the time Makefile.am has been transformed into Makefile,
	so don't try to rerun the substitutions manually with
	$(bootstrap_edit) after the fact.

2011-10-17  Gary V. Vaughan  <gary@gnu.org>

	Post-release administrivia.
	* configure.ac, libltdl/configure.ac (AC_INIT): Bump version
	numbers.
	* NEWS: Add header line for next release.

	Release 2.4.2.
	* configure.ac, libltdl/configure.ac (AC_INIT): Bump version
	numbers.
	* NEWS: Update version number.

	Replace leading spaces with tabs.
	* libltdl/m4/libtool.m4, libltdl/config/ltmain.m4sh: Replace leading
	spaces in soure code with tabs to match surrounding code.
	Reported by Peter Rosin.

	Make a note to use gnu/linux for version_type.
	* libltdl/m4/libtool.m4 (version_type): Add a comment to change
	version_type setting from 'linux' to 'gnu/linux' during the next
	destabilising code refactoring.
	* libltdl/config/ltmain.m4sh: ditto.
	Requested by Richard Stallman.

2011-10-04  Bart Van Assche <bvanassche@acm.org>

	Typo fix - change func_apped into func_append
	* libltdl/config/ltmain.m4sh: Fix typo.

2011-10-02  Xin LI <d@delphij.net>

	Avoid problems when FreeBSD goes to version 10.
	* libltdl/m4/libtool.m4: Remove mentions of freebsd1. Use dots
	for FreeBSD 2 and 3 detection to avoid future problems
	* libltdl/m4/ltmain.m4sh: ditto.

2011-09-25  Cristophe Jarry <christophe.jarry@ouvaton.org>

	Avoid mentioning "Linux", use "GNU/Linux", if appropriate.
	* TODO: Don't use bare "Linux".
	* doc/libtool.texi: ditto.
	* doc/notes.texi: ditto.
	* libltdl/README: ditto.
	* libltdl/m4/libtool.m4: ditto.

2011-09-01  Peter O'Gorman  <peter@pogma.com>

	Add flag to inhibit warnings.
	* libltdl/config/ltmain.m4sh: Add --no-warn, --no-warning flags.
	Reported by John Davd Anglin.

2011-04-10  Kurt Roeckx  <kurt@roeckx.be>
